Canonicalization of input, simple error reporting, several tests